# WeatherApplication

./: CMakeLists.txt  README.md  main.cpp
ConfigParseAndRequests/: json_storage.cpp  json_storage.h
Interface/: ConsoleInterface.cpp  ConsoleInterface.h
